WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312882
Fix immersive state consistency during rapid request/exit cycles
https://bugs.webkit.org/show_bug.cgi?id=312882
Summary
Fix immersive state consistency during rapid request/exit cycles
Jean Haberer
Reported
2026-04-21 04:48:35 PDT
Fix immersive state consistency during rapid request/exit cycles
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-21 04:48:44 PDT
<
rdar://problem/175242589
>
Jean Haberer
Comment 2
2026-04-21 04:59:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63222
EWS
Comment 3
2026-04-21 08:25:26 PDT
Committed
311684@main
(28bd6e3983d3): <
https://commits.webkit.org/311684@main
> Reviewed commits have been landed. Closing PR #63222 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug